--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev:ui": "npm run vite:ui",
     "dev:plugin": "npm run vite:plugin -- --watch",
     "build": "rimraf dist && npm run build:plugin && npm run build:ui",
-    "build:ui": "tsc --project tsconfig.ui.json && rm -f public/plugin.js && npm run vite:ui -- build",
-    "build:plugin": "tsc --project tsconfig.plugin.json && npm run vite:plugin -- --outDir dist"
+    "build:ui": "tsc --project ui/tsconfig.json && rm -f public/plugin.js && npm run vite:ui -- build",
+    "build:plugin": "tsc --project plugin/tsconfig.json && npm run vite:plugin -- --outDir dist"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
@@ -21,6 +21,6 @@
     "vite-plugin-singlefile": "^1.0.0"
   },
   "dependencies": {
-    "@qatium/plugin": "0.0.11"
+    "@qatium/plugin": "0.0.12"
   }
 }
