--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,11 +1,12 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2020",
     "lib": [
+      "ES2020",
       "DOM",
       "DOM.Iterable"
     ],
   },
-  "include": ["ui"]
+  "include": ["/."]
 }
