--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,10 +19,6 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./node_modules/@qatium"
-    ]
+    "noFallthroughCasesInSwitch": true
   }
 }
