--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "vite-plugin-singlefile": "^1.0.0"
   },
   "dependencies": {
-    "@qatium/plugin": "0.0.14"
+    "@qatium/plugin": "^0.0.20"
   }
 }
