--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "test": "jest --verbose",
+    "test:watch": "pnpm run test --watchAll -i --no-cache",
     "vite:ui": "vite --config vite.config.ui.ts",
     "vite:plugin": "vite --config vite.config.plugin.ts build",
     "dev": "concurrently \"npm:dev:*\"",
@@ -13,13 +15,19 @@
     "build:plugin": "tsc --project plugin/tsconfig.json && npm run vite:plugin -- --outDir dist"
   },
   "devDependencies": {
+    "@qatium/sdk-testing-library": "^1.0.2",
+    "@types/jest": "^29.5.11",
     "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-singlefile": "^1.0.0"
   },
   "dependencies": {
-    "@qatium/plugin": "^0.0.20"
+    "@qatium/plugin": "^0.0.25"
   }
 }
