--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "test": "jest --verbose",
-    "test:watch": "pnpm run test --watchAll -i --no-cache",
+    "test:watch": "npm run test --watchAll -i --no-cache",
     "vite:ui": "vite --config vite.config.ui.ts",
     "vite:plugin": "vite --config vite.config.plugin.ts build",
     "dev": "concurrently \"npm:dev:*\"",
