--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "lib": [
@@ -8,5 +8,8 @@
       "DOM.Iterable"
     ],
   },
-  "include": ["/."]
+  "include": [
+    ".",
+    "../setupTests.ts"
+  ]
 }
