USE latest for qatium/plugin

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "vite-plugin-singlefile": "^1.0.0"
   },
   "dependencies": {
-    "@qatium/plugin": "^0.0.27"
+    "@qatium/plugin": "latest"
   }
 }
