--- a/src/panel/tsconfig.json
+++ b/src/panel/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
+    "jsx": "react-jsx",
     "lib": [
       "ES2020",
       "DOM",
