--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "jest-watch-typeahead": "^2.2.2",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.11.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-singlefile": "^1.0.0"
   },
   "dependencies": {
-    "@qatium/plugin": "latest"
+    "@qatium/sdk": "latest"
   }
 }
