--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   },
   "devDependencies": {
     "@qatium/sdk-testing-library": "latest",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@types/jest": "^29.5.11",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.2",
+    "rimraf": "^5.0.7",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "tsx": "^4.11.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "vite-plugin-singlefile": "^1.0.0"
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.1",
+    "vite-plugin-singlefile": "^2.0.2"
   },
   "dependencies": {
-    "@qatium/sdk": "latest"
+    "@qatium/sdk": "^0.0.25"
   }
 }
