--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "esModuleInterop": true,
     "lib": [
       "ES6",
-      "ES2020"
+      "ES2020",
+      "DOM",
+      "DOM.Iterable",
     ],
     "module": "ESNext",
     "skipLibCheck": true,
