Add schema manifest

--- a/metadata/manifest.json
+++ b/metadata/manifest.json
@@ -1,5 +1,5 @@
 {
+  "$schema": "https://unpkg.com/@qatium/sdk/manifest.schema.json",
   "name": "Sample plugin",
-  "version": "1.0.0",
-  "icon": "icon.svg"
+  "version": "1.0.0"
 }
